--- a/_data/share.yml
+++ b/_data/share.yml
@@ -14,6 +14,10 @@ platforms:
     icon: "fab fa-telegram"
     link: "https://t.me/share/url?url=URL&text=TITLE"
 
+  - type: WhatsApp
+    icon: "fab fa-whatsapp"
+    link: "https://api.whatsapp.com/send?text=TITLE%20URL"
+
   # Uncomment below if you need to.
   #
   # - type: Linkedin
