--- a/_config.yml
+++ b/_config.yml
@@ -161,7 +161,7 @@ pagination:
     after: 2
 
 # The base URL of your site
-baseurl: ""
+baseurl: "https://lakshyasinghchauhan.com/lakshyaelite.github.io1"
 
 # ! ------------ The following options are not recommended to be modified ------------------
 
