--- a/_config.yml
+++ b/_config.yml
@@ -226,6 +226,7 @@ exclude:
   - purgecss.js
   - "*.config.js"
   - "package*.json"
+  - "feed.xml"
 
 jekyll-archives:
   enabled: [categories, tags]
