--- a/_config.yml
+++ b/_config.yml
@@ -234,8 +234,8 @@ jekyll-archives:
     category: category
     tag: tag
   permalinks:
-    tag: /tags/:name/
-    category: /categories/:name/
+    tag: /blog/tags/:name/
+    category: /blog/categories/:name/
 
 plugins:
   - jekyll-paginate-v2
