--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,24 +1,25 @@
 #  The contact options.
-- type: rss
-  icon: "fas fa-rss"
-  noblank: true
-
-- type: email
-  icon: "fas fa-envelope"
-  noblank: true # open link in current tab
-
 
 - type: github
   icon: "fab fa-github"
 
 - type: codepen
   icon: "fab fa-codepen"
-  url: "https://codepen.io/lakshyaelite" # Fill with your CodePen profile link
 
-- type: devto
-  icon: "fab fa-dev"
-  url: "https://dev.to/lakshyaelite"
+- type: twitter
+  icon: "fa-brands fa-x-twitter"
 
+- type: email
+  icon: "fas fa-envelope"
+  noblank: true # open link in current tab
+
+- type: rss
+  icon: "fas fa-rss"
+  noblank: true
+
+- type: tips
+  icon: 'fa-solid fa-money-bill'
+  url: 'https://getmetoffee.vercel.app/payment.html?upiId=8320390785%40pz&name=Lakshya+Singh+Chauhan&price=10'
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
@@ -29,20 +30,17 @@
 #   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
 #   url:  ''                  # Fill with your Linkedin homepage
 #
-- type: stack-overflow
-  icon: "fab fa-stack-overflow"
-  url: "https://stackoverflow.com/users/19254524/lakshya-singh-chauhan" # Fill with your stackoverflow homepage
-
-- type: tips
-  icon: "fa-solid fa-money-bill"
-  url: "https://getmetoffee.vercel.app/payment.html?upiId=8320390785@pz&name=Lakshya+Singh+Chauhan&price=10"
+# - type: stack-overflow
+#   icon: 'fab fa-stack-overflow'
+#   url:  ''                  # Fill with your stackoverflow homepage
+#
 # - type: bluesky
 #   icon: 'fa-brands fa-bluesky'
 #   url: ''                   # Fill with your Bluesky profile link
 #
-# - type: reddit
-#   icon: 'fa-brands fa-reddit'
-#   url: ''                   # Fill with your Reddit profile link
+- type: reddit
+  icon: 'fa-brands fa-reddit'
+  url: 'https://www.reddit.com/user/lakshyaelite/' # Fill with your Reddit profile link
 #
 # - type: threads
 #   icon: 'fa-brands fa-threads'
